--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - certificates:/certs:ro
-      - ./config/traefik/traefik.yml:/etc/traefik/traefik.yml:ro
+      - ./config/traefik:/etc/traefik:ro
       - ./config/traefik/acme.json:/certificates/acme.json
     labels:
       - "traefik.enable=true"
