--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,7 @@ services:
       - "traefik.http.routers.traefik-dashboard.rule=Host(`traefik.${DOMAIN}`)"
       - "traefik.http.routers.traefik-dashboard.entrypoints=websecure"
       - "traefik.http.routers.traefik-dashboard.service=api@internal"
-      - "traefik.http.routers.traefik-dashboard.tls=true"
+      - "traefik.http.routers.traefik-dashboard.tls.certresolver=lets-encrypt"
       - "traefik.http.middlewares.traefik-dashboard-auth.basicauth.users=admin:$$apr1$$Uazqzaux$$YDT/IZif09rWWybKr.QCg0"
       - "traefik.http.routers.traefik-dashboard.middlewares=traefik-dashboard-auth@docker"
       - "traefik.http.services.traefik-dashboard.loadbalancer.server.port=8080"
